--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <h1 id="title">freeCodeCamp Survey Form</h1>
     <p id="description">Tank you for taking the time to help us improve the plataform</p>
     <form id="survey-form">
-        <label for="name">Name <input id="name" type="text" required></label>
-        <label for="email">Email <input id="email" type="email" required></label>
-        <label for="age">Age <input id="number" type="number" min="10" max="100"></label>
+        <label id="name-label" for="name">Name <input id="name" type="text" required placeholder="Enter your name" ></label>
+        <label id="email-label" for="email">Email <input id="email" type="email" required placeholder="Enter your Email"></label>
+        <label id="number-label" for="age">Age <input id="number" type="number" min="10" max="100" placeholder="Age"></label>
+        <!--aulas 26
         <label for="role">Which option best describes your current role? <input id="role" type="text"></label>
-        <label for="recommend">Would you recommend freeCodeCamp to a friend? <input id="recommend" type="radio"></label> <!--aulas 26-->
+        <label for="recommend">Would you recommend freeCodeCamp to a friend? <input id="recommend" type="radio"></label> 
         <label for="feature">What is your favorite feature of freeCodeCamp? <input id="feature" type="text"></label>
         <label for="improved">What would you like to see improved? (Check all that apply) <input id="improved" type="text"></label>
         <label for="suggestions">Any comments or suggestions? <input id="suggestions" type="text"></label>
+        -->
+        
         <input type="submit" value="submit">
     </form>
 </body>
